rake task for creating promoters and terminators

--- a/app/views/auto_builds/new.html.erb
+++ b/app/views/auto_builds/new.html.erb
@@ -65,7 +65,7 @@
                   <td>chromosome:chrII</td>
                 </tr>
                 <tr>
-                  <td>feature</td>
+                  <td>feature*</td>
                   <td>Entity type, e.g. CDS, tRNA, telomere</td>
                   <td>feature:CDS</td>
                 </tr>
@@ -100,6 +100,8 @@
                   <td>description:shock protein</td>
                 </tr>
               </table>
+              <p>* Promoter is defined as 500bp upstream of CDS or till gene boundaries</p>
+              <p>&nbsp;  Terminator is defined as 100bp downstream of CDS or till gene boundaries</p>
             </div>
           </div>
         </div>
