--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -62,7 +62,7 @@
           <td>chromosome:chrII</td>
         </tr>
         <tr>
-          <td>feature</td>
+          <td>feature*</td>
           <td>Entity type, e.g. CDS, tRNA, telomere</td>
           <td>feature:CDS</td>
         </tr>
@@ -97,6 +97,8 @@
           <td>description:shock protein</td>
         </tr>
       </table>
+      <p>* Promoter is defined as 500bp upstream of CDS or till gene boundaries</p>
+      <p>&nbsp;  Terminator is defined as 100bp downstream of CDS or till gene boundaries</p>
     </div>
 
     <div class="tab-pane" id="file">
