edit home page, use ruby to analyze restriction enzymes

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,7 +1,7 @@
 <h2><i class='icon-book'> </i>Users</h2>
 <hr />
 <%= will_paginate @users %>
-<table class="table table-bordered table-stripped">
+<table class="table table-bordered table-striped">
   <tr>
     <th>#</th>
     <th>Fullname</th>
