--- a/app/views/designs/index.html.erb
+++ b/app/views/designs/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <%= will_paginate @designs %>
-<table class="table table-bordered table-stripped">
+<table class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>#</th>
