--- a/app/views/designs/show.html.erb
+++ b/app/views/designs/show.html.erb
@@ -4,7 +4,7 @@
 <h5>Design Standard: <%= @design.protocol.name %></h5>
 
 <% if !@design.comment.blank? %>
-  Comment: <%= @design.comment %>
+ <b>Comment:</b> <%= @design.comment %> <br />
 <% end %>
 
 <b>Designed parts:</b>
