--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,7 +1,7 @@
 <h2><i class='icon-book'> </i>Jobs</h2>
 <hr />
 <%= will_paginate @jobs %>
-<table class="table table-bordered table-stripped" >
+<table class="table table-bordered table-striped" >
   <thead>
     <tr>
       <th>#</th>
