--- a/app/views/labs/index.html.erb
+++ b/app/views/labs/index.html.erb
@@ -2,7 +2,7 @@
   <h2><i class="icon-book"> </i>Labs</h2>
 </div>
 <%= will_paginate @labs %>
-<table class="table table-bordered table-stripped">
+<table class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>#</th>
