--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,7 +1,7 @@
 <h2><i class='icon-book'> </i>Orders</h2>
 <hr />
 <%= will_paginate @orders %>
-<table class="table table-bordered table-stripped">
+<table class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>#</th>
