--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -14,7 +14,7 @@
 <hr />
 <b>Designs: </b>
 <%= will_paginate @designs %>
-<table class="table table-bordered table-stripped">
+<table class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>#</th>
