--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,116 @@
-<h2>Welcome to PartsBuilder</h2>
+<div align='center'>
+  <h2>Welcome to PartsBuilder</h2>
+</div>
 <hr />
-<div class='well' >
-  <p>PartsBuilder is a biological design automation tool with an user-friendly interface for retrieving sequences from multiple sources, recoding sequences for yeast Golden-Gate standard, and producing order sheets</p><br />
-  <b>How to design your parts</b><br /><br />
-  <b>Solution 1</b><br />
-  The simplest way: go to "AutoBuild", fill out all required information, one click, your parts designed<br /><br />
-  <b>Solution 2</b><br />
-  A more flexible way to handle your data: <br />
-  Step 1. Parts => New, input a list of protein/nucleotide accession number<br />
-  Step 2. Designs => New, select one design standard and one or more parts to design<br />
-  Step 3. Orders => New, select designs to order<br />
-  <br />
+
+<div align='center'>
+  <%= form_tag({:action => "search_result"}, :method => "post", :multipart => true) do %>
+    <%= text_field_tag :sequence, '', :class => 'genome_search' %><br />
+    Examples: name:*YAL*, sequence:*KAVNVLKKADVV*, organism:Bacillus subtilis AND feature:CDS, <a href="#myModal" data-toggle="modal">see full syntax instruction</a><br /><br />
+    <%= submit_tag("Search Part", :class => "btn btn-primary") %>
+  <% end %>
+</div>
+<br /><br />
+
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Syntax Guide</h3>
+  </div>
+  <div class="modal-body">
+    <p>You can input any words to search all the fields, or search a specific field using the format: field_name:words. 'AND', 'OR' can be used to combine diffrent fields to create complex queries.</p>
+    <b>Keywords</b>
+    <table class='table table-striped table-bordered'>
+      <thead>
+        <tr>
+          <th>Keyword</th>
+          <th>Description</th>
+          <th>Query Example</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>name</td>
+          <td>Part name</td>
+          <td>name:*cob*</td>
+        </tr>
+        <tr>
+          <td>accession_number</td>
+          <td>Sequence accession number</td>
+          <td>accession_number:YAL*</td>
+        </tr>
+        <tr>
+          <td>organism</td>
+          <td>Oganism latin name</td>
+          <td>organism:Saccharomyces cerevisiae</td>
+        </tr>
+        <tr>
+          <td>feature</td>
+          <td>Entity type, e.g. CDS, tRNA, promoter</td>
+          <td>feature:CDS</td>
+        </tr>
+        <tr>
+          <td>sequence</td>
+          <td>Part sequence</td>
+          <td>sequence:*CAGTTTTGCTCATCATAAA*</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+
+<div class="row-fluid">
+  <div class="span4">
+    <h4>Newest Parts</h4>
+    <table class="table table-striped table-bordered">
+      <tr>
+        <th></th>
+        <th>Name</th>
+        <th>Created at</th>
+      </tr>
+      <% cnt = 0 %>
+      <% @parts.each do |p| %>
+        <% cnt += 1 %>
+        <tr>
+          <td><%= cnt %></td>
+          <td><%= link_to p.name, part_path(p.id) %></td>
+          <td><%= l p.created_at.in_time_zone('EST') %></td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
+
+  <div class="span4">
+    <h4>Newest Designs</h4>
+    <table class="table table-striped table-bordered">
+      <tr>
+        <th></th>
+        <th>Part Name</th>
+        <th>Design standards</th>
+        <th>Result</th>
+      </tr>
+      <% cnt = 0 %>
+      <% @designs.each do |d| %>
+        <% cnt += 1 %>
+        <tr>
+          <td><%= cnt %></td>
+          <td><%= link_to d.part.name, part_path(d.part.id) %></td>
+          <td><%= link_to d.protocol.name, protocol_path(d.protocol.id) %></td>
+          <td><%= link_to 'view', design_path(d.id) %></td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
+
+  <div class="span4">
+    <h4>Help</h4>
+    <p>BioPartsBuilder is a a biological design automation tool developed by <a href="http://www.baderzone.org" target="_blank">Bader's group</a> at Johns Hopkins University. BioPartsBuilder can help you:</p>
+    <p>1) Retrieve sequences and annotations of parts from NCBI database, annotated genmoe, or fasta files</p>
+    <p>2) optimize the codon usage of the sequence</p>
+    <p>3) remove restriction enzymes without changing translation</p>
+    <p>4) check restriction enzyme sites</p>
+    <p>5) add prefix and suffix to the sequence</p>
+    <p>6) carve long sequence into fragments with overlaps</p>
+  </div>
 </div>
