--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "PartsBuilder" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "BioPartsBuilder" %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="<%= root_path %>">PartsBuilder</a>
+          <a class="brand" href="<%= root_path %>">BioPartsBuilder</a>
 		  
 		<% if !current_user %>
 			<ul class="nav nav-pills">
@@ -49,7 +49,7 @@
       </div><!--/row-->
 
       <footer>
-          <p><%= link_to 'Back', url_for(:back) %> | &copy; Synthetic Biology Group (JHU) - 2012</p>
+          <p><%= link_to 'Back', url_for(:back) %> | &copy; Synthetic Biology Group (JHU) - 2014</p>
       </footer>
 
     </div> <!-- /container -->
