--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -35,7 +35,7 @@
       <li>start:[1 TO 10000] AND feature:CDS AND orf_classification:verified <i>(find all the verified CDS with start position from 1 to 10000)</i></li>
       <hr />
       <p><b>Keywords</b></p>
-      <table class="table table-stripped table-bordered">
+      <table class="table table-striped table-bordered">
         <tr>
           <th>Keyword</th>
           <th>Description</th>
