--- a/app/views/parts/show.html.erb
+++ b/app/views/parts/show.html.erb
@@ -45,7 +45,7 @@
 </div>
 
 <div class="tab-pane" id="design">
-  <table class="table table-bordered table-stripped">
+  <table class="table table-bordered table-striped">
     <thead>
       <tr>
         <th>#</th>
