add file converter

--- a/app/views/layouts/_menubar.html.erb
+++ b/app/views/layouts/_menubar.html.erb
@@ -34,6 +34,18 @@
 		<li><%= link_to 'New', new_order_path %></li>	
 	</ul>
 	</li>
+
+	<li class="dropdown">
+	<a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="#">
+		File Converter
+		<b class="caret"></b>
+	</a>
+	<ul class="dropdown-menu">
+		<li><%= link_to 'Files', file_converts_path %></li>
+		<li><%= link_to 'Convert a File', new_file_convert_path %></li>	
+	</ul>
+	</li>
+
 </ul>
 
 <ul class="nav pull-right">	
