--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -106,7 +106,7 @@
       <%= file_field_tag(:sequence_file)%>
       <br /><br />
       <p class="text-error">Important: The description line must use the following format:</p>
-      <p><b>></b> part_name <b>|</b> part_type <b>|</b> accession_number <b>|</b> organism(optional)<b> | </b>comments(optional)</p> 
+      <p><b>></b> part_symbol(should not contain accession number) <b>|</b> part_type <b>|</b> accession_number <b>|</b> organism(optional)<b> | </b>comments(optional)</p> 
       <p>Only one description line is allowed for one sequence</p>
       <p> Check more details and examples: <%= link_to 'description', {:action => :get_description_file} %></p>
   <div class="form-actions">
