--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,8 @@
 		  
 		<% if !current_user %>
 			<ul class="nav nav-pills">
-				<li><a href="/auth/google">Login</a></li>					      
+				<li><a href="/auth/google">Login / Create your Lab</a></li>					      
+        <li><%= link_to 'Login as Guest', :controller => :sessions, :action => :guest %></li>					      
 		  	</ul>
 		<% else %>
 			<%= render :partial => "layouts/menubar" %>
