--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -102,7 +102,7 @@
     </div>
 
     <div class="tab-pane" id="file">
-      <p><b>Upload a Fasta File of Protein Sequences (only .fasta and .txt allowed):</b></p>
+      <p><b>Upload a Fasta File of Protein Sequences (only .fa, .fasta and .txt allowed):</b></p>
       <%= file_field_tag(:sequence_file)%>
       <br /><br />
       <p class="text-error">Important: The description line must use the following format:</p>
