--- a/app/views/auto_builds/new.html.erb
+++ b/app/views/auto_builds/new.html.erb
@@ -109,7 +109,7 @@
     </div>
 
     <div class="tab-pane" id="file">
-      <h5>1. Upload a Fasta File of Protein Sequences:</h5>
+      <h5>1. Upload a Fasta File of Protein Sequences (only .fa, .fasta and .txt allowed):</h5>
       <%= file_field_tag(:sequence_file)%>
       <p class="text-error">Important: The description line must use the following format:</p>
       <p><b>></b> part_name <b>|</b> part_type <b>|</b> accession_number <b>|</b> organism(optional)<b> | </b>comments(optional)</p>
