--- a/app/views/auto_builds/new.html.erb
+++ b/app/views/auto_builds/new.html.erb
@@ -1,6 +1,5 @@
-<div class="page-header">
-  <h2><i class="icon-play-circle"> </i>Design your parts</h2>
-</div>
+<h2><i class="icon-play-circle"> </i>Design your parts</h2>
+</hr>
 
 <%= form_tag({:controller => "auto_builds", :action => "confirm"}, :method => "post", :multipart => true) do %>
 
@@ -112,9 +111,12 @@
       <h5>1. Upload a Fasta File of Protein Sequences (only .fa, .fasta and .txt allowed):</h5>
       <%= file_field_tag(:sequence_file)%>
       <p class="text-error">Important: The description line must use the following format:</p>
-      <p><b>></b> part_name <b>|</b> part_type <b>|</b> accession_number <b>|</b> organism(optional)<b> | </b>comments(optional)</p>
-      <p>Only one description line is allowed for one sequence</p>
-      <p>Check more details and examples: <%= link_to 'description', {:controller => :parts, :action => :get_description_file} %></p>
+      <p><b>></b> part_symbol <b>|</b> part_type <b>|</b> accession_number <b>|</b> source organism<b> | </b>comments</p>
+      <p class="muted">** Only one description line is allowed for one sequence</p>
+      <p class="muted">** Must use latin name for source organism</p>
+      <p class="muted">** source organism and comment are optional</p>
+      <p class="muted">** Part name will be created automatically in format: type_organism_symbol_accession number</p>
+      <p><i>Check more details and examples: <%= link_to 'description', {:controller => :parts, :action => :get_description_file} %></i></p>
     </div>
   </div>
   <hr />
