--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -20,9 +20,9 @@
           <td>One id per line<br />e.g.<br />NP_058651.3<br />YP_491843.1<br />P29929.1</td>
         </tr>
       </table>
-  <div class="form-actions">
-    <%= submit_tag("Create Parts", :class => "btn btn-primary") %>
-  </div>
+      <div class="form-actions">
+        <%= submit_tag("Create Parts", :class => "btn btn-primary") %>
+      </div>
     </div>
 
     <div class="tab-pane" id="genome">
@@ -106,12 +106,16 @@
       <%= file_field_tag(:sequence_file)%>
       <br /><br />
       <p class="text-error">Important: The description line must use the following format:</p>
-      <p><b>></b> part_symbol(should not contain accession number) <b>|</b> part_type <b>|</b> accession_number <b>|</b> organism(optional)<b> | </b>comments(optional)</p> 
-      <p>Only one description line is allowed for one sequence</p>
-      <p> Check more details and examples: <%= link_to 'description', {:action => :get_description_file} %></p>
-  <div class="form-actions">
-    <%= submit_tag("Create Parts", :class => "btn btn-primary") %>
-  </div>
+      <p><b>></b> part_symbol <b>|</b> part_type <b>|</b> accession_number <b>|</b> source organism<b> | </b>comments</p>
+      <p class="muted">** Only one description line is allowed for one sequence</p>
+      <p class="muted">** Must use latin name for source organism</p>
+      <p class="muted">** source organism and comment are optional</p>
+      <p class="muted">** Part name will be created automatically in format: type_organism_symbol_accession number</p>
+      <p><i>Check more details and examples: <%= link_to 'description', {:action => :get_description_file} %></i></p>
+
+      <div class="form-actions">
+        <%= submit_tag("Create Parts", :class => "btn btn-primary") %>
+      </div>
     </div>
   </div>
 <% end %>
