--- a/app/views/parts/confirm.html.erb
+++ b/app/views/parts/confirm.html.erb
@@ -5,17 +5,12 @@
 <% end %>
 <hr />
 
-<% unless @errors.empty? %>
-  <% if !@sequences.nil? %>
-    <p style="color:red">There are errors in your uploaded file.</p>
-    <p>Please note that the description line must follow the format: <b>>part_name|part_type|accession_number|organism|comments</b>.  Organism and comments are optional. One sequence can only have one description line.</p>
-    <hr />
-    <p><b>Errors:</b></p>
-    <% @errors.each do |entry| %>
-      &nbsp;&nbsp;<%= entry %> <br />
-    <% end %>
-  <% else %>
-    <p style="color:red">Error: <%= @errors[0] %></p>
+<% unless @errors.blank? %>
+  <p style="color:red">There are errors in your uploaded file.</p>
+  <hr />
+  <p><b>Errors:</b></p>
+  <% @errors.each do |entry| %>
+    &nbsp;&nbsp;<%= entry %> <br />
   <% end %>
   <div class="form-actions">
     <%= link_to 'Go Back', new_part_path, :class => 'btn btn-primary' %>
@@ -38,9 +33,30 @@
           <th>Part Name</th>
           <th>Part Type</th>
           <th>Accession Number</th>
-          <th>Organism</th>
+          <th>Source Organism</th>
         </tr>
         <% @sequences.each do |seq| %>
+          <tr>
+            <td><%= seq['part'] %></td>
+            <td><%= seq['type'] %></td>
+            <td><%= seq['accession'] %></td>
+            <td><%= seq['org'] %></td>
+          </tr>
+        <% end %>
+      </table>
+
+    <% elsif !@csv_seqs.blank? %>
+      <%= hidden_field_tag(:csv_file, @csv_file) %>
+      <p><b><%= @csv_seqs.size %></b> parts to be created.  They are:</p>
+      <hr />
+      <table class="table table-striped">
+        <tr>
+          <th>Part Name</th>
+          <th>Part Type</th>
+          <th>Accession Number</th>
+          <th>Source Organism</th>
+        </tr>
+        <% @csv_seqs.each do |seq| %>
           <tr>
             <td><%= seq['part'] %></td>
             <td><%= seq['type'] %></td>
