upgrade google authentication to oauth2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 		  
 		<% if !current_user %>
 			<ul class="nav nav-pills">
-				<li><a href="/auth/google">Login / Create your Lab</a></li>					      
+				<li><a href="/auth/google_oauth2">Login / Create your Lab</a></li>					      
         <li><%= link_to 'Login as Guest', :controller => :sessions, :action => :guest %></li>					      
         <li><%= link_to 'Tutorial', tutorials_path %></li>
       </ul>
