--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -28,7 +28,7 @@
 		  
 		<% if !current_user %>
 			<ul class="nav nav-pills">
-				<li><a href="/auth/google">Login</a></li>					      
+				<li><a href="/auth/google_oauth2">Login</a></li>					      
 		  	</ul>
 		<% else %>
 			<%= render :partial => "layouts/admin_menubar" %>
