--- a/app/views/auto_builds/new.html.erb
+++ b/app/views/auto_builds/new.html.erb
@@ -155,7 +155,7 @@
       <td><%= text_field_tag :order_name %></td>
     </tr>
     <tr>
-      <td width="100px"><%= label_tag :vendor_id, "Vendor" %></td>
+      <td width="100px"><%= label_tag :vendor_id, "Format" %></td>
       <td><%= collection_select :order, :vendor_id, Vendor.all, :id, :name %></td>
     </tr>
   </table>
