--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,7 +7,7 @@
       <th>#</th>
       <th>Name</th>
       <th>User</th>
-      <th>Vendor</th>
+      <th>Format</th>
       <th>Result</th>
       <th>Created_at</th>
     </tr>
