minor change on homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
     Query Example: organism:Saccharomyces cerevisiae AND feature:CDS &nbsp; &nbsp; 
     <a href="#myModal" data-toggle="modal">see full syntax instruction</a>
     <br /><br />
-    <%= submit_tag("Search Part", :class => "btn btn-primary") %>
+    <%= submit_tag("Search Designed Part", :class => "btn btn-primary") %>
   <% end %>
 </div>
 <br /><br />
