show uniq search results

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -55,7 +55,7 @@
         <tr>
           <td>sequence</td>
           <td>Part sequence</td>
-          <td>sequence:*CAGTTTTGCTCATCATAAA*</td>
+          <td>sequence:*vqhimageppsmvadtl*</td>
         </tr>
       </tbody>
     </table>
