--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
       </div><!--/row-->
 
       <footer>
-          <p><%= link_to 'Back', url_for(:back) %> | &copy; Synthetic Biology Group (JHU) - 2014</p>
+      <p><%= link_to 'Back', url_for(:back) %> | &copy; Synthetic Biology Group (JHU) - <%= Time.now.year %></p>
       </footer>
 
     </div> <!-- /container -->
