--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,6 +13,10 @@
     <%= submit_tag("Search Designed Part", :class => "btn btn-primary") %>
   <% end %>
 </div>
+<div class='container'>
+  <hr />
+  <p>Please cite us: <a href="http://www.ncbi.nlm.nih.gov/pubmed/26568632" target='_blank'>Yang K, Stracquadanio G, Luo J, Boeke JD, Bader JS. <b>BioPartsBuilder: a synthetic biology tool for combinatorial assembly of biological parts.</b> <i>Bioinformatics</i>. 2015 Nov 14. pii: btv664.</a></p>
+</div>
 <br /><br />
 
 <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
