--- a/app/views/tutorials/index.html.erb
+++ b/app/views/tutorials/index.html.erb
@@ -6,6 +6,7 @@
 <p><%= link_to '2. How to build parts by AutoBuild', '#2'%></p>
 <p><%= link_to '3. How to build parts step by step', '#3'%></p>
 <p><%= link_to '4. How to manage design standards', '#4'%></p>
+<p><%= link_to '5. How to cite us', '#5'%></p>
 <hr />
 
 <div id='1'>
@@ -36,5 +37,11 @@
 <div id='4'>
   <p><b>4. How to manage design standards</b></p>
   <iframe width="425" height="349" src="http://www.youtube.com/embed/pzpMTcEj4tw" frameborder="0" allowfullscreen></iframe>
+</div>
+<br />
+
+<div id='5'>
+  <p><b>5. How to cite us</b></p>
+  <p>Please cite: <a href="http://www.ncbi.nlm.nih.gov/pubmed/26568632" target='_blank'>Yang K, Stracquadanio G, Luo J, Boeke JD, Bader JS. <b>BioPartsBuilder: a synthetic biology tool for combinatorial assembly of biological parts.</b> <i>Bioinformatics</i>. 2015 Nov 14. pii: btv664.</a></p>
 </div>
 <br />
